--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.0.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.522.0",
