--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
