--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.81.5",
+    "@types/web-push": "^3.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
@@ -56,6 +57,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
+    "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
