--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-switch": "^7.1.0",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
